wordpress_no-helm/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  # EN: Internal service for Ingress | FR: Service interne pour l'Ingress
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
