wordpress_no-helm/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
spec:
  # EN: Use Traefik IngressClass | FR: Utiliser la classe Traefik
  ingressClassName: traefik
  rules:
    - host: wp-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
